# sentinel

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
ai/: package.json
ai/src/: index.ts
cli/: package.json
cli/src/: index.ts
cli/src/commands/: connect.ts  escalations.ts  protect.ts  status.ts  update.ts
cli/src/utils/: config.ts  display.ts  wallet.ts
demo/: package.json
demo/src/: index.ts
docs/: INTERFACE.md
programs/sentinel/: Cargo.toml
programs/sentinel/src/: errors.rs  events.rs  lib.rs
programs/sentinel/src/instructions/: approve_escalation.rs  create_escalation.rs  execute_guarded.rs  initialize.rs  mod.rs  update_policy.rs
programs/sentinel/src/state/: escalation.rs  mod.rs  policy.rs
scripts/: deploy.sh  setup-test-agent.ts
sdk/: package.json
sdk/src/: client.ts  index.ts  types.ts
sdk/src/ai/: anomalyDetector.ts  policyParser.ts
sdk/src/instructions/: approveEscalation.ts  executeGuarded.ts  initialize.ts  updatePolicy.ts
sdk/src/queries/: getAuditLog.ts  getEscalations.ts  getPolicy.ts
tests/: sentinel.ts
tests/fixtures/: policies.ts
tests/sdk/: client.test.ts
